RAIN-5386 : DSS W&S service bar alignment for selected tab is fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
@@ -1,6 +1,5 @@
 .dss-switch-tabs{/* Card / Primary */
 
-
 /* Light Theme / Paper */
 
 background: #FFFFFF;
@@ -20,12 +19,12 @@ margin-right:25px;
 }
 .dss-switch-tab-selected{
   /* Revenue */
-  padding: 10px;
+  padding: 7px;
   border-bottom:3px solid #F47738;
 
 font-family: Roboto;
 font-style: normal;
-font-weight: bold;
+font-weight: 500;
 font-size: 24px;
 
 color: #F47738;
